fixed small layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -442,22 +442,6 @@
     justify-content: center;
 }
 
-// Experience
-
-.experience-card{
-    max-width: 1000px;
-    margin-top: 50px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    overflow: hidden;
-    border: none;
-}
-
-.card-title, .card-subtitle, .card-text{
-    margin: 10px;
-}
-
 
 // Certifications Section
 //-------------------------------------
